--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "10-GreatBay",
+  "name": "bamazon",
   "version": "1.0.0",
-  "description": "**Instructions**",
-  "main": "GreatBay.js",
-  "dependencies": {
-    "inquirer": "^7.0.0",
-    "mysql": "^2.17.1"
-  },
-  "devDependencies": {},
+  "description": "",
+  "main": "bamazonCustomer.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lalaneha/bamazon.git"
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lalaneha/bamazon/issues"
+  },
+  "homepage": "https://github.com/lalaneha/bamazon#readme",
+  "dependencies": {
+    "cli-table": "^0.3.1",
+    "inquirer": "^7.0.0",
+    "mysql": "^2.17.1",
+    "node": "^12.11.0"
+  }
 }
